// Vitest Snapshot v1

exports[`parseRoute function > basic-routes 1`] = `
[
  {
    "componentName": "index",
    "file": "index.tsx",
    "id": "/",
    "index": true,
    "layout": false,
    "parentId": undefined,
    "path": "/",
  },
]
`;

exports[`parseRoute function > nested layout 1`] = `
[
  {
    "componentName": "layout",
    "file": "layout.tsx",
    "id": "/layout",
    "index": undefined,
    "layout": true,
    "parentId": undefined,
    "path": "/",
  },
  {
    "componentName": "home",
    "file": "home.tsx",
    "id": "/home",
    "index": undefined,
    "layout": true,
    "parentId": "/layout",
    "path": "home",
  },
  {
    "componentName": "home1",
    "file": "home1.tsx",
    "id": "/home/1",
    "index": undefined,
    "layout": false,
    "parentId": "/home",
    "path": "1",
  },
  {
    "componentName": "home2",
    "file": "home2.tsx",
    "id": "/home/2",
    "index": undefined,
    "layout": false,
    "parentId": "/home",
    "path": "2",
  },
  {
    "componentName": "about",
    "file": "about.tsx",
    "id": "/about",
    "index": undefined,
    "layout": false,
    "parentId": "/layout",
    "path": "about",
  },
]
`;

exports[`parseRoute function > with layout 1`] = `
[
  {
    "componentName": "layout",
    "file": "layout.tsx",
    "id": "/layout",
    "index": undefined,
    "layout": true,
    "parentId": undefined,
    "path": "/",
  },
  {
    "componentName": "home",
    "file": "home.tsx",
    "id": "/home",
    "index": undefined,
    "layout": false,
    "parentId": "/layout",
    "path": "home",
  },
  {
    "componentName": "about",
    "file": "about.tsx",
    "id": "/about",
    "index": undefined,
    "layout": false,
    "parentId": "/layout",
    "path": "about",
  },
  {
    "componentName": "index",
    "file": "index.tsx",
    "id": "/",
    "index": true,
    "layout": false,
    "parentId": "/layout",
    "path": "/",
  },
]
`;
